fixed slider responsive spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: solid 1px red;
+  /* border: solid 1px red; */
 }
 
 html{
@@ -30,7 +30,7 @@ html{
  justify-content: space-around;
  flex-wrap: wrap;
  flex-direction: row;
- width: 70%;
+ width: 80%;
 
 }
 .blog-post{
@@ -43,7 +43,7 @@ html{
   display: flex;
   align-items: center;
   border-radius: .8rem;
-  margin: 5rem auto;
+  margin: 5rem;
   flex-direction: column;
 }
 
@@ -166,7 +166,7 @@ html{
 
 aside{
     width: 20%;
-    
+    min-height: 100vh;
     background-color: lightblue;
     
 }
@@ -228,21 +228,36 @@ input[type=submit]{
 
 }
 
+.popular-section{
+  display: flex;
+ justify-content: center;
+ flex-wrap: wrap;
+ flex-direction: row;
+ width: 95%;
+ text-align: center;
+}
+
+.popular{
+  display: block;
+  width: 100%;
+  font-size: 3rem;
+  text-align: center;
+  margin: 5rem 0;
+}
+
 .popular-tabs{
   display: block;
-  width: 80%;
-  margin-left: 20%;
+  width: 100%;
 }
 
 
 .swiper-container {
   display: block;
-  width: 80vw;
+  width: 70vw;
   margin: 5rem auto;
 }
 
 .swiper-slide {
-  text-align: center;
   font-size: 18px;
   background: #fff;
 
